# up-main-relay-coding

./: AbstractAttributableThing.hpp  AbstractFeelableThing.hpp  AbstractMovableThing.hpp  Antioxidants.hpp  Attributable.hpp  CMakeLists.txt  Circle.hpp  Circumference.hpp  Dimensions.hpp  GodDrinksCpp.cpp  Makefile  Memory.hpp  Pose.hpp  README.en.md  README.md  base64.cpp  memory.cpp  memory.hpp  would.hpp
include/: Attribute.hpp  Eggplant.hpp  Limit.hpp  Lovable.hpp  Name.hpp  Nutrients.hpp  PointSet.hpp  Sequence.hpp  SineWave.hpp  TabbyCat.hpp  Thing.hpp  Tomato.hpp  allinone.hpp  would.hpp
src/: GodDrinksCpp.cpp
